Update project files and add .gitignore to exclude node_modules

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  /* gap: 60px; */
 }
 
 h1,
@@ -75,9 +75,7 @@ p {
 }
 
 @media (width >= 800px) {
-  #root {
-    gap: 100px;
-  }
+ 
   h1 {
     font-size: 40px;
   }
@@ -94,9 +92,7 @@ p {
   }
 
   @media (width >= 1400px) {
-    #root {
-      gap: 200px;
-    }
+   
     h1 {
       font-size: 48px;
     }
