--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -1,3 +1,13 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: 0;
+}
+
+h1, h2, p {
+  font-family: "Poppins", serif; /* Apply Poppins font */
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -6,9 +16,12 @@
   text-align: center;
   height: 100dvh;
   min-height: 500px;
+  font-family: "Poppins", serif; /* Apply Poppins font here */
 
   .hero {
-    max-width: 200px;
+    max-width: 380px;
+    height: 380px;
+    border-radius: 50%;
   }
 
   span {
@@ -39,6 +52,7 @@
     height: 50px;
     font-size: 20px;
     font-weight: bold;
+    font-family: "Poppins", serif; /* Ensure font is applied to buttons */
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
   }
@@ -82,6 +96,8 @@
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-evenly;
+    height: max-content;
+    padding: 50px;
 
     .hero {
       max-width: 350px;
